--- a/src/app/player/player-change-requests/player-change-requests-modal/player-change-requests-modal.component.html
+++ b/src/app/player/player-change-requests/player-change-requests-modal/player-change-requests-modal.component.html
@@ -2,7 +2,9 @@
   <h4 bioModalTitle>Update score</h4>
   <bio-modal-content>
     <div controlArrayName="scorePlayers">
-      <ng-container *ngFor="let scorePlayer of data.score.scorePlayers; trackBy: trackById; let $index = index">
+      <ng-container
+        *ngFor="let scorePlayer of data.score.scorePlayers; trackBy: trackByScorePlayer; let $index = index"
+      >
         <div [controlGroupName]="$index" class="player">
           <div class="title">
             <h5>Player {{ $index + 1 }} ({{ scorePlayer.idPlayer }})</h5>
@@ -19,12 +21,12 @@
                   <bio-spinner [size]="0.1"></bio-spinner> Loading...
                 </bio-option>
                 <bio-optgroup
-                  *ngFor="let character of characters$ | async; trackBy: trackById"
+                  *ngFor="let character of characters$ | async; trackBy: trackByCharacter"
                   [label]="character.name"
                   [title]="character.name"
                 >
                   <bio-option
-                    *ngFor="let characterCostume of character.characterCostumes; trackBy: trackById"
+                    *ngFor="let characterCostume of character.characterCostumes; trackBy: trackByCharacterCostume"
                     [value]="characterCostume.id"
                     title="{{ character.name }} {{ characterCostume.name }}"
                   >
@@ -59,7 +61,7 @@
             <bio-form-field label="Controller" [loading]="loadingInputTypes">
               <bio-select controlName="idPlatformInputType" placeholder="Controller">
                 <bio-option
-                  *ngFor="let platformInputType of platformInputTypes$ | async; trackBy: trackById"
+                  *ngFor="let platformInputType of platformInputTypes$ | async; trackBy: trackByPlatformInputType"
                   [value]="platformInputType.id"
                 >
                   {{ platformInputType.nameInputType }}
@@ -109,7 +111,11 @@
     <h5>Changes Requested</h5>
     <div class="score-changes" controlArrayName="idsScoreChangeRequests">
       <div
-        *ngFor="let scoreChangeRequest of data.score.scoreChangeRequests; trackBy: trackById; let $index = index"
+        *ngFor="
+          let scoreChangeRequest of data.score.scoreChangeRequests;
+          trackBy: trackByScoreChangeRequest;
+          let $index = index
+        "
         [controlGroupName]="$index"
       >
         <bio-checkbox controlName="checked">{{ scoreChangeRequest.description }}</bio-checkbox>
