--- a/src/app/score/score-list/score-list/score-list.component.html
+++ b/src/app/score/score-list/score-list/score-list.component.html
@@ -21,7 +21,7 @@
         <bio-list-item-line>
           {{ score.stageName }}
         </bio-list-item-line>
-        <bio-list-item-line *ngFor="let scorePlayer of score.scorePlayers; trackBy: trackById">
+        <bio-list-item-line *ngFor="let scorePlayer of score.scorePlayers; trackBy: trackByScorePlayer">
           {{ scorePlayer.characterName }} {{ scorePlayer.characterCostumeName }} ({{ scorePlayer.playerPersonaName }})
         </bio-list-item-line>
         <div bioSuffix [bioTooltip]="score.score | number: '1.0-0'">{{ score.score | scoreFormat }}</div>
